# Mono-VO

./: CMakeLists.txt  cam_traj.txt  main.cpp
config/: kitti.yaml
data/: kitti
include/myslam/: camera.h  ceres_ba.h  common_include.h  config.h  epipolar_geometry.h  feature_matching.h  frame.h  kitti_config.h  map.h  mappoint.h  utils.h  visual_odometry.h
result/: cam_traj_4.txt
src/: CMakeLists.txt  camera.cpp  config.cpp  epipolar_geometry.cpp  feature_matching.cpp  frame.cpp  kitti_config.cpp  map.cpp  mappoint.cpp  utils.cpp  vo.cpp  vo_addFrame.cpp  vo_initialization.cpp  vo_io.cpp  vo_tracking.cpp
test/: CMakeLists.txt  test_2d_matching.cpp  test_config.cpp  test_epipolar_geometry.cpp  test_vo_initialization.cpp
